[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-lifecycle"
authors = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"}
]
maintainers = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"},
]
description = "NetBox Support Contract and EOL/EOS management"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netbox-plugin", ]
version = "1.1.5"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'django-polymorphic',
]

[project.urls]
Documentation = "https://github.com/dansheps/netbox-lifecycle/blob/main/README.md"
Source = "https://github.com/dansheps/netbox-lifecycle"
Tracker = "https://github.com/dansheps/netbox-lifecycle/issues"

[tool.setuptools.packages.find]
exclude=["netbox_lifecycle.tests"]

[tool.black]
skip-string-normalization = 1